feat(story) thêm các chức năng update trạng thái publish của story

--- a/Src/Manhwa.Application/Manhwa.Application.csproj
+++ b/Src/Manhwa.Application/Manhwa.Application.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Features\Interactions\" />
     <Folder Include="Features\Community\" />
     <Folder Include="Features\Notifications\" />
+    <Folder Include="Features\Stories\Command\UpdateStoryStatus\" />
   </ItemGroup>
 
 </Project>
