feat(notification) thêm chức năng lấy ra tất cả các thông báo của user

--- a/Src/Manhwa.Application/Manhwa.Application.csproj
+++ b/Src/Manhwa.Application/Manhwa.Application.csproj
@@ -26,7 +26,8 @@
 
   <ItemGroup>
     <Folder Include="Features\Community\" />
-    <Folder Include="Features\Notifications\" />
+    <Folder Include="Features\Notifications\Queries\GetUnreadCount\" />
+    <Folder Include="Features\Notifications\Queries\MarkAsRead\" />
   </ItemGroup>
 
 </Project>
