--- a/Src/Manhwa.Application/Manhwa.Application.csproj
+++ b/Src/Manhwa.Application/Manhwa.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
     <PackageReference Include="MassTransit" Version="9.0.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="9.0.0" />
     <PackageReference Include="MediatR" Version="12.1.1" />
